--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -5,6 +5,7 @@
 	--particleLineColor: #8e8e8e;
 	--tooltipCard: rgba(0, 0, 0, 1);
 	--tooltipHand: rgba(255, 255, 255, 1);
+	--items-hover: #ccc;
 	--overlayColor: rgba(0, 0, 0, 0);
 	--formColor: #d9d9d9;
 	--formHoverColor: #bababa;
@@ -20,6 +21,7 @@
 		--particleLineColor: #fff;
 		--tooltipCard: rgba(255, 255, 255, 0.2);
 		--tooltipHand: rgba(255, 255, 255, 1);
+		--items-hover: #323232;
 		--overlayColor: rgba(0, 0, 0, 0.3);
 		--formColor: #333333;
 		--formHoverColor: #4e4e4e;
@@ -36,6 +38,7 @@
 		--particleLineColor: #fff;
 		--tooltipCard: rgba(255, 255, 255, 0.2);
 		--tooltipHand: rgba(255, 255, 255, 1);
+		--items-hover: #323232;
 		--overlayColor: rgba(0, 0, 0, 0.3);
 		--formColor: #333333;
 		--formHoverColor: #4e4e4e;
@@ -50,6 +53,7 @@
 		--particleLineColor: #8e8e8e;
 		--tooltipCard: rgba(0, 0, 0, 1);
 		--tooltipHand: rgba(255, 255, 255, 1);
+		--items-hover: #ccc;
 		--overlayColor: rgba(0, 0, 0, 0);
 		--formColor: #d9d9d9;
 		--formHoverColor: #bababa;
