--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,5 +20,6 @@
 
 // компоненты
 @import './components/button';
+@import './components/theme-button';
 @import './components/swiper-anim';
 @import './components/popup';
