--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -9,6 +9,10 @@
 	box-sizing: border-box;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 html,
 body {
 	height: 100%;
@@ -75,6 +79,7 @@ h6 {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
+	position: relative;
 	min-height: 100%;
 }
 
