--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,13 +1,21 @@
 .button {
+	margin-top: 60px;
 	padding: 15px 20px;
 	border: var(--cardBorder);
-	transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out,
-		border-color 0.2s ease-in-out;
+	border-radius: 7px;
+	opacity: 0;
+
+	&.animate {
+		opacity: 1;
+		transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out,
+			color 0.2s ease-in-out, background-color 0.2s ease-in-out,
+			border-color 0.2s ease-in-out;
+		transform: translateY(-15px);
+	}
 
 	@media (min-width: 768px) {
 		&:hover {
-			color: var(--primaryColor);
-			background-color: var(--secondaryColor);
+			background-color: var(--items-hover);
 			border-color: var(--primaryColor);
 		}
 	}
