--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -37,10 +37,17 @@
 		}
 	}
 
-	.socialItem {
+	.social-item {
+		display: flex;
+		width: 40px;
+		height: 40px;
+
 		img {
-			width: 40px;
-			height: 40px;
+			transition: transform 0.2s ease-in-out;
+
+			&:hover {
+				transform: scale(1.1);
+			}
 		}
 	}
 }
