--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -7,14 +7,8 @@
 
 	.container {
 		display: flex;
+		align-items: center;
 		justify-content: center;
-	}
-
-	.themeToggle {
-		position: absolute;
-		width: calc(25px + 5 * (100vw - 554px) / 886);
-		top: 25px;
-		right: 25px;
 	}
 
 	.nav {
@@ -61,23 +55,7 @@
 		margin: 0;
 
 		.container {
-			justify-content: flex-start;
-		}
-
-		.themeToggle {
-			display: none;
-		}
-
-		.themeToggle-mobile {
-			position: absolute;
-			width: 25px;
-			top: 12px;
-			left: 10px;
-
-			img {
-				position: absolute;
-				width: 100%;
-			}
+			justify-content: space-between;
 		}
 
 		.nav {
@@ -95,9 +73,6 @@
 			overflow: hidden;
 			width: 40px;
 			height: 40px;
-			position: absolute;
-			top: 5px;
-			right: 15px;
 			z-index: 5;
 		}
 
@@ -111,8 +86,15 @@
 			background-color: rgba(0, 0, 0, 0.9);
 			transition: right 0.3s ease-in-out;
 
+			.nav-mobile-body {
+				display: flex;
+				width: 100%;
+				min-height: 100%;
+			}
+
 			.nav-list {
 				margin: auto;
+				padding: 30px 0;
 				display: flex;
 				flex-direction: column;
 				font-size: 20px;
@@ -123,6 +105,7 @@
 
 			&.show {
 				right: 0;
+				overflow-y: scroll;
 			}
 		}
 
@@ -135,10 +118,10 @@
 			-ms-user-select: none;
 			user-select: none;
 		}
-		.hamRotate.active {
+		.ham-rotate.active {
 			transform: rotate(45deg);
 		}
-		.hamRotate180.active {
+		.ham-rotate180.active {
 			transform: rotate(180deg);
 		}
 		.line {
