--- a/src/scss/sections/_completed-projects.scss
+++ b/src/scss/sections/_completed-projects.scss
@@ -8,6 +8,7 @@
 	.container {
 		display: flex;
 		flex-direction: column;
+		align-items: center;
 	}
 
 	.projects {
@@ -15,13 +16,6 @@
 		flex-wrap: wrap;
 		justify-content: center;
 		gap: 30px;
-		opacity: 0;
-
-		&.animate {
-			opacity: 1;
-			transition: opacity 0.4s ease-in-out;
-			transition-delay: 0.2s;
-		}
 	}
 
 	.project {
@@ -31,7 +25,15 @@
 		border-radius: 10px;
 		border: var(--cardBorder);
 		transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out,
-			border-color 0.2s ease-in-out;
+			border-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+
+		&.animate-on-scroll {
+			opacity: 0;
+		}
+
+		&.animate-on-scroll.animate {
+			opacity: 1;
+		}
 
 		&.hidden {
 			display: none;
@@ -39,8 +41,7 @@
 
 		@media (min-width: 768px) {
 			&:hover {
-				color: var(--primaryColor);
-				background-color: var(--secondaryColor);
+				background-color: var(--items-hover);
 				border-color: var(--primaryColor);
 			}
 		}
@@ -59,20 +60,8 @@
 		}
 	}
 
-	.buttonBody {
+	.button-body {
 		display: flex;
 		justify-content: center;
-	}
-
-	.button {
-		margin-top: 40px;
-		opacity: 0;
-
-		&.animate {
-			opacity: 1;
-			transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
-			transform: translateY(-15px);
-			transition-delay: 0.2s;
-		}
 	}
 }
